# par-run

./: README.md  commands.ini  pyproject.toml
py_tests/: conftest.py  test_cli.py  test_executor.py  test_web.py
src/par_run/: __init__.py  cli.py  executor.py  web.py
