[project]
name = "par-run"
version = "0.1.1"
description = "Parallel command runner"
license = "MIT"
authors = [
    { name = "Naz Quadri", email = "naz.quadri@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "rich>=13.7.1",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "psutil>=5.9.8",
    "pytest-cov>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-benchmark>=4.0.0",
    "flake8>=7.0.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "pylint>=3.1.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "types-toml>=0.10.8.20240310",
    "bump-my-version>=0.19.3",
    "pytest-random-order>=1.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
"par-run" = "par_run.cli:cli_app"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/par_run",
    "static",
    "templates",
]

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "{new_version}"
tag_message = "Version {new_version}"
message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
parse = """(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"""
serialize = [
    "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "src/par_run/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.pytest.ini_options]
addopts = "--cov src --cov-report html:.reports/html --cov-report term --random-order -v"
minversion = "8.0"
pythonpath = ["src", "py_tests"]
testpaths = "py_tests"
pythonfiles = "test_*.py"
